static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');

body{
  background-color: #ebebeb;
  margin:0 auto;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  font-family:"Noto Sans", sans-serif;
}
ul, li{
  padding: 0;
  list-style: none;
}

header{
  background-color: #141414;
}

a{
  text-decoration: none;
}

.headerbar{
  position:relative;
  overflow:hidden;
}

/* hero image */
.headerimage{
  width:100%;
  height:100%;
  position: relative;
  overflow:hidden;
  float:left;
}


/* navbar styling starts here */
/* Main navbar styling */
.navbar {
  background-color: #141414;
}

.navbaritems {
  font-size: 1rem;
  display: flex;
  user-select: none;
}

.navbaritems .navbar-button,
.navbaritems .dropdown {
  position: relative;
  margin-right: 15px;
  font-size: inherit;
}

.navbaritems a {
  display: block;
  color: #ebebeb;
  padding: 10px 15px;
  text-decoration: none;
  font-size: inherit;
}

.navbaritems a:hover {
  background-color: #91170C;
}


/* Mobile menu styling */
.menu-icon {
  display: none;
  cursor: pointer;
}

.mobile-navbaritems {
  display: none;
  flex-direction: column;
  background-color: #141414;
}

.mobile-navbaritems a {
  display: block;
  padding: 15px;
  color: #ebebeb;
  text-decoration: none;
  font-size: inherit;
}

.mobile-navbaritems a:hover {
  background-color: #91170C;
}

/* Media queries for responsive design */
@media (max-width: 768px) {
  /* Hide desktop navigation and show mobile menu icon */
  .navbaritems {
      display: none;
  }

  .menu-icon {
      display: block;
  }

  .mobile-navbaritems.show {
      display: flex;
  }
}

/* Dropdown menu styling */
.dropdown-content {
  display: none;
  position: absolute;
  border-radius: .25rem;
  background-color: #141414;
  box-shadow: 2px 5px 0 rgba(0, 0, 0, .01);
}

.dropdown-content a:hover {
  background-color: #91170C;
}

.dropdown-content.show {
  display: block;
}

.dropdownbutton {
  background-color: #141414;
  color: #ebebeb;
  padding: 10px 15px;
  font-size: inherit;
  cursor: pointer;
}

.dropdownbutton:hover {
  background-color: #91170C;
}

.dropdown-arrow {
  width: 20px; 
  height: 20px; 
  margin-left: 5px; 
  vertical-align: middle; 
}


/* styling for the home route's container */
.flexbox-home-container {
  display: flex;
  flex-direction: column; 
  justify-content: center; 
  align-items: center; 
  text-align: center; 
  margin-bottom: 20px; 
}

.flexbox-home-container h1 {
  font-size: 2rem; 
  margin-bottom: 5px;
  color:#91170C
}

.flexbox-home-container h2 {
  font-size: 1rem; 
  max-width: 600px; 
}
.flexbox-home-container h5 {
  font-size: .75rem; 
  color:gray
}

.redirect-hyperlink{
  text-decoration: underline;
  color: #91170C;
}

/* grid container for infromation  */
.grid-info-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr)); /*changfes by screen size */
  gap: auto;
  padding: 20px;
  row-gap: 20px;
  justify-items: center;
}

.grid-info-container a{
  text-decoration: none;
  color: #141414;
}

/* Style for multiple grid items */
.grid-multiple-items {
  background-color: #f2f2f2;
  padding: 10px;
  border: 1px solid #ddd;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  text-align: center;
  transition: 0.3s ease;
  width: 95%;
  word-wrap:break-word;
  box-sizing: border-box;
}

.grid-multiple-items:hover{
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);

}
.grid-multiple-items h2 {
  margin-bottom: 10px;
}

.grid-multiple-items p {
  margin: 10px 0;
}
.grid-multiple-items img {
  max-width: 100%;
  height: 500px;
  border-radius: 4px;
}

/* styling pages where there is only one item in grid */
.grid-single-item{
  background-color: #f2f2f2;
  padding: 20px;
  border: 1px solid #ddd;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  text-align: center;
  transition: box-shadow 0.3s ease;
  max-width: 50%;
  word-wrap:break-word;
}


.grid-single-item:hover{
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);

}
.grid-single-item h2 {
  margin-bottom: 10px;
}

.grid-single-item p {
  margin: 10px 0;
}
.grid-single-item img {
  max-width: 100%;
  height: 500px;
  border-radius: 4px;
}

/* error message */
.flash-message-container {
  display: flex;
  justify-content: center; 
  align-items: center; 
}

.flash-message {
  color: #91170C;
  font-weight: bold;
  font-size: 1.5vw;
  text-align: center;
}

/* textarea strategy styling */
#strategy {
  min-width: 40%;
  min-height: 300px; 
}

/* flexbox for account registering and login */
.account-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.account-form {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 400px; /* Limit form width */
  gap: 20px; /* Add space between input fields and button */
}

.account-form input[type="text"],
.account-form input[type="password"],
.account-btn {
  width: 100%;
  box-sizing: border-box; /* Ensure padding doesn't affect width */
}

.account-btn {
  padding: 10px;
  background-color: #4CAF50;
  color:#ebebeb;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 16px;
  text-align: center;
}

.account-btn:hover {
  background-color: #45a049;
}


/* password styling */
.password-container {
  position: relative;
}


.toggle-password {
  position: absolute;
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  width: 20px;
  height: 20px;
}

/* dashboard styling */
.dashboard-button{
  color: #141414;
  text-decoration: none;
}

/* footer section of css */
footer{
  background-color: #141414;
  display: block;
  color:#ebebeb;
  margin-top: auto;
  text-decoration: none;
}

footer a{
  text-decoration: underline;
  color:inherit
}

